# bazel-js-example

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  index.html  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml
src/: App.test.tsx  App.tsx  index.css  index.tsx  util.test.ts  util.ts
